--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-query-devtools": "^5.91.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.29.2",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
